texto feito(nao revisado)

--- a/Site/index.html
+++ b/Site/index.html
@@ -105,7 +105,7 @@
             </clipPath>
             </defs>
         </svg>
-         <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis </h4>
+         <h4>A psicoterapia é um tipo de terapia cuja finalidade é tratar os problemas psicológicos como depressão, ansiedade entre outros problemas  </h4>
         <svg width="342" height="228" viewBox="0 0 342 228" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M201.607 41.4094H186.29V74.2003H201.607V41.4094Z" fill="#F5F5F5"/>
             <path d="M221.069 76.4894H202.245V108.172H221.069V76.4894Z" fill="#F5F5F5"/>
@@ -440,7 +440,7 @@
             <path d="M256.546 128.081C256.095 128.18 255.638 128.242 255.178 128.268C254.339 128.364 253.18 128.487 251.917 128.724C250.837 128.914 249.77 129.176 248.725 129.509C248.299 129.672 247.864 129.809 247.421 129.919C247.815 129.683 248.234 129.492 248.671 129.349C249.707 128.967 250.775 128.679 251.863 128.487C252.952 128.301 254.051 128.175 255.155 128.109C255.616 128.053 256.082 128.044 256.546 128.081Z" fill="#455A64"/>
             <path d="M321.024 219.692C321.024 219.756 253.445 219.81 170.088 219.81C86.7313 219.81 19.1521 219.756 19.1521 219.692C19.1521 219.628 86.7176 219.573 170.088 219.573C253.459 219.573 321.024 219.628 321.024 219.692Z" fill="#263238"/>
         </svg>
-         <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis nunc</h4>
+         <h4>A Massoterapia, é uma prática ou terapia de aplicação da força, ou vibração, sobre partes do corpo, a fim de alíviar dores corporais, traumas físicos, aliviar tensão psicológica.</h4>
         <svg width="342" height="282" viewBox="0 0 342 282" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_532_852)">
             <path d="M146.669 113.696C151.875 108.365 153.694 99.5786 150.73 94.0716C147.766 88.5646 141.142 88.4222 135.936 93.7534C130.729 99.0846 123.411 113.502 126.375 119.009C129.339 124.516 141.462 119.027 146.669 113.696ZM128.7 116.586C127.591 116.027 127.289 114.27 128.026 112.661C128.763 111.052 130.259 110.201 131.368 110.76C132.477 111.32 132.779 113.077 132.042 114.686C131.306 116.295 129.809 117.146 128.7 116.586H128.7Z" fill="#3F3D56"/>
@@ -500,9 +500,9 @@
             </clipPath>
             </defs>
         </svg>
-         <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis nunc</h4>
+         <h4>Pintura é uma técnica que utiliza pigmentos em forma líquida para colorir uma superfície, atribuindo tons e texturas, esta superfície pode ser tela, papel ou parede.</h4>
         
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis nunc</h3>
+        <h3>Aqui no Alecrim temos diversas atividades e cursos! Clique no botão abaixo e confira</h3>
 
         <div id="btn-ativ">
             <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -550,7 +550,7 @@
 
     <section class="map-info" id="MapSec">
         <h2>Como Chegar?</h2>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis nunc</h3>
+        <h3>O Alecrim fica localizado em: Rua Papa João XXIII, 95 - Pedregulho, Guaratinguetá</h3>
        
         <a href="https://www.google.com/maps/place/Alecrim+Terapias+e+Cursos/@-22.8049587,-45.2057135,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccc53b2d236e01:0xa8f5b29b340bbf73!8m2!3d-22.8049637!4d-45.2035248">
         <div class="googlemap">
