--- a/Site/index.html
+++ b/Site/index.html
@@ -29,7 +29,7 @@
         
     <section class="inicio"  id="InicioSec">
         <h1>Alecrim Florido</h1>
-        <h4>"Após 10 anos de existência o Alecrim floriu. Desde de 1° de agosto de 2011 cuidando de você"</h4>
+        <h4>"Após 10 anos de existência o Alecrim floriu. Desde de 1° de agosto de 2011 cuidando da sua saúde e bem estar"</h4>
        <button id="inicio-btn">
         <a href="#ActiveSec">
             <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
