--- a/Site/index.html
+++ b/Site/index.html
@@ -16,16 +16,20 @@
             <h1>Alecrim Florido</h1>
             <h3>Terapias Cursos e Produtos</h3>
       </div>
+      <nav id="nav">
+        <button id="btn-menu">
+            <span class="ham"></span>    
+        </button>
+        <ul class="menu">
+            <li><a href="#InicioSec">Home</a></li>
+            <li><a href="#ActiveSec">Atividades</a></li>
+            <li><a href="/">Profissionais</a></li>
+            <li><a href="/">Chás</a></li>
+            <li><a href="#MapSec">Como Chegar?</a></li>
+            <li><a href="#InfoSec">Contato</a></li>
+        </ul>
+     </nav>
     </header>
-
-    <a href="#header">
-    <div id="btn-volta">
-    <svg width="40" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">  
-            <path d="M6.25006 39.5833H43.7501C44.1297 39.5821 44.5019 39.4774 44.8265 39.2804C45.1511 39.0835 45.4158 38.8017 45.5921 38.4655C45.7685 38.1293 45.8498 37.7513 45.8274 37.3723C45.8049 36.9933 45.6795 36.6276 45.4646 36.3146L26.7146 9.23123C25.9376 8.10831 24.0667 8.10831 23.2876 9.23123L4.53756 36.3146C4.32052 36.6269 4.19325 36.9928 4.16957 37.3725C4.14588 37.7521 4.22669 38.131 4.40321 38.4679C4.57973 38.8048 4.84521 39.087 5.17081 39.2836C5.49642 39.4803 5.86968 39.5839 6.25006 39.5833Z" fill="#6A678D"/>
-    </svg>
-    </div>
-    </a>
-                
         
     <section class="inicio"  id="InicioSec">
         <h1>Alecrim Florido</h1>
@@ -36,7 +40,7 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5 40C5 49.2826 8.68749 58.185 15.2513 64.7487C21.815 71.3125 30.7174 75 40 75C49.2826 75 58.185 71.3125 64.7487 64.7487C71.3125 58.185 75 49.2826 75 40C75 30.7174 71.3125 21.815 64.7487 15.2513C58.185 8.68749 49.2826 5 40 5C30.7174 5 21.815 8.68749 15.2513 15.2513C8.68749 21.815 5 30.7174 5 40ZM80 40C80 50.6087 75.7857 60.7828 68.2843 68.2843C60.7828 75.7857 50.6087 80 40 80C29.3913 80 19.2172 75.7857 11.7157 68.2843C4.21427 60.7828 0 50.6087 0 40C0 29.3913 4.21427 19.2172 11.7157 11.7157C19.2172 4.21427 29.3913 0 40 0C50.6087 0 60.7828 4.21427 68.2843 11.7157C75.7857 19.2172 80 29.3913 80 40ZM42.5 22.5C42.5 21.837 42.2366 21.2011 41.7678 20.7322C41.2989 20.2634 40.663 20 40 20C39.337 20 38.7011 20.2634 38.2322 20.7322C37.7634 21.2011 37.5 21.837 37.5 22.5V51.465L26.77 40.73C26.3006 40.2606 25.6639 39.9968 25 39.9968C24.3361 39.9968 23.6994 40.2606 23.23 40.73C22.7606 41.1994 22.4968 41.8361 22.4968 42.5C22.4968 43.1639 22.7606 43.8006 23.23 44.27L38.23 59.27C38.4622 59.5028 38.7381 59.6875 39.0418 59.8136C39.3456 59.9396 39.6712 60.0045 40 60.0045C40.3288 60.0045 40.6544 59.9396 40.9582 59.8136C41.2619 59.6875 41.5378 59.5028 41.77 59.27L56.77 44.27C57.2394 43.8006 57.5032 43.1639 57.5032 42.5C57.5032 41.8361 57.2394 41.1994 56.77 40.73C56.3006 40.2606 55.6639 39.9968 55 39.9968C54.3361 39.9968 53.6994 40.2606 53.23 40.73L42.5 51.465V22.5Z" fill="black"/>
             </svg> 
         </a>
-    </button>
+     </button>
             <div class="ret"></div> 
         <div class="eclipse"></div>    
     </section>
@@ -595,8 +599,8 @@
         <div class="map-desk">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.9326665343124!2d-45.20571348547082!3d-22.804958739977707!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccc53b2d236e01%3A0xa8f5b29b340bbf73!2sAlecrim%20Terapias%20e%20Cursos!5e0!3m2!1spt-BR!2sbr!4v1644513677706!5m2!1spt-BR!2sbr" width="100vw" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-    </a>
-        <div class="info">
+      </a>
+        <div class="info" id="InfoSec">
              <div class="phone">
                 <div class="icons">
                     <a href="tel:(12)3133-5304">
@@ -674,4 +678,7 @@
     </footer>
 </body>
 <script src="scripts/btn-volta.js"></script>
+<script src="scripts/menu.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+<script src="scripts/animations.js"></script>
 </html>
