--- a/Site/index.html
+++ b/Site/index.html
@@ -681,4 +681,5 @@
 <script src="scripts/menu.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 <script src="scripts/animations.js"></script>
+<script src="scripts/sroll.js"></script>
 </html>
