--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -117,7 +117,7 @@
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <<img src="imagens/pint.png" alt="">
+                <img src="imagens/pint.png" alt="">
                 <h2 class="prof-titulo">Nome</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
