--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -44,7 +44,7 @@
                     <div class="opcoes" id="opcoes">
                         <a href="#" class="opcao">
                             <div class="conteudo-opcao">
-                                <img src="imagens/index/mobile/logo-header.png" alt="">
+                                <img src="imagens/simbolo-da-psicologia.png" alt="">
                                 <div class="textos">
                                     <h2 class="titulo">Psicoterapia</h2>
                                 </div>
@@ -53,7 +53,7 @@
 
                         <a href="#" class="opcao">
                             <div class="conteudo-opcao">
-                                <img src="imagens/index/mobile/logo-header.png" alt="">
+                                <img src="imagens/pint.png" alt="">
                                 <div class="textos">
                                     <h2 class="titulo">Pintura</h2>
                                 </div>
@@ -62,9 +62,63 @@
 
                         <a href="#" class="opcao">
                             <div class="conteudo-opcao">
-                                <img src="imagens/index/mobile/logo-header.png" alt="">
+                                <img src="imagens/img_202988.pngx" alt="">
                                 <div class="textos">
                                     <h2 class="titulo">Massagem</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/pottery.png" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Modelacao</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/yoga.png" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Yoga</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/belly.png" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Danca</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/index/mobile/logo-header.png" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Constelacao</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/acupuncture-needles.svg" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Acunpuntura</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="#" class="opcao">
+                            <div class="conteudo-opcao">
+                                <img src="imagens/Singer.svg.png" alt="">
+                                <div class="textos">
+                                    <h2 class="titulo">Canto</h2>
                                 </div>
                             </div>
                         </a>
@@ -153,6 +207,160 @@
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__mod opcao-p">
+            <div class="profissional">
+                <img src="imagens/pottery.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+               <img src="imagens/pottery.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/pottery.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/pottery.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__yoga opcao-p">
+            <div class="profissional">
+                <img src="imagens/yoga.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/yoga.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/yoga.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/yoga.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/yoga.png" alt="">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__danca opcao-p">
+            <div class="profissional">
+                <img src="imagens/belly.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/belly.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/belly.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/belly.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/belly.png" alt="">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__const opcao-p">
+            <div class="profissional">
+                <img src="imagens/img_202988.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/img_202988.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__acun opcao-p">
+            <div class="profissional">
+                <img src="imagens/acupuncture-needles.svg" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/acupuncture-needles.svg" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/acupuncture-needles.svg" alt="">               <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/acupuncture-needles.svg" alt="">                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/acupuncture-needles.svg" alt="">
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+
+        <div class="prof__canto opcao-p">
+            <div class="profissional">
+                <img src="imagens/Singer.svg.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/Singer.svg.png" alt="">
+
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/Singer.svg.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/Singer.svg.png" alt="">
+                <h2 class="prof-titulo">Nome</h2>
+                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="profissional">
+                <img src="imagens/Singer.svg.png" alt="">
+
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
