--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -134,27 +134,27 @@
         <div class="prof__psico opcao-p">
             <div class="profissional">
                 <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Silvia biscaro</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Fatima Averaldo</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Gisele </h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Cecylle Cavalca</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Ricardo Patricio</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -162,27 +162,12 @@
         <div class="prof__pintura opcao-p">
             <div class="profissional">
                 <img src="imagens/pint.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Caio Germano</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/pint.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/pint.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/pint.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/pint.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Aline Pinho</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -190,23 +175,12 @@
         <div class="prof__mass opcao-p">
             <div class="profissional">
                 <img src="imagens/img_202988.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
+                <h2 class="prof-titulo">Maria Bernini</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
                 <img src="imagens/img_202988.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
+                <h2 class="prof-titulo">Laura Borges</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -214,23 +188,7 @@
         <div class="prof__mod opcao-p">
             <div class="profissional">
                 <img src="imagens/pottery.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-               <img src="imagens/pottery.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/pottery.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/pottery.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
+                <h2 class="prof-titulo">Aline Pinho</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -238,26 +196,7 @@
         <div class="prof__yoga opcao-p">
             <div class="profissional">
                 <img src="imagens/yoga.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/yoga.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/yoga.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/yoga.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/yoga.png" alt="">
+                <h2 class="prof-titulo">Bia Dias</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -265,24 +204,7 @@
         <div class="prof__danca opcao-p">
             <div class="profissional">
                 <img src="imagens/belly.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/belly.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/belly.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/belly.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/belly.png" alt="">
+                <h2 class="prof-titulo">Rudilene Tuti</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -290,23 +212,7 @@
         <div class="prof__const opcao-p">
             <div class="profissional">
                 <img src="imagens/img_202988.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
+                <h2 class="prof-titulo">Silvia Biscaro</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -314,24 +220,7 @@
         <div class="prof__acun opcao-p">
             <div class="profissional">
                 <img src="imagens/acupuncture-needles.svg" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/acupuncture-needles.svg" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/acupuncture-needles.svg" alt="">               <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/acupuncture-needles.svg" alt="">                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/acupuncture-needles.svg" alt="">
+                <h2 class="prof-titulo">Ana Cristina</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
@@ -339,28 +228,7 @@
         <div class="prof__canto opcao-p">
             <div class="profissional">
                 <img src="imagens/Singer.svg.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/Singer.svg.png" alt="">
-
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/Singer.svg.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/Singer.svg.png" alt="">
-                <h2 class="prof-titulo">Nome</h2>
-                <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
-            </div>
-            <div class="profissional">
-                <img src="imagens/Singer.svg.png" alt="">
-
+                <h2 class="prof-titulo">Yago Correa</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
