--- a/Site/chas.html
+++ b/Site/chas.html
@@ -19,12 +19,13 @@
             <span class="ham"></span>    
         </button>
         <ul class="menu">
-            <li><a href="#InicioSec">Home</a></li>
-            <li><a href="#ActiveSec">Atividades</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html#ActiveSec">Atividades</a></li>
             <li><a href="/profissionais.html">Profissionais</a></li>
             <li><a href="/">Chás</a></li>
-            <li><a href="#MapSec">Como Chegar?</a></li>
-            <li><a href="#InfoSec">Contato</a></li>
+            <li><a href="index.html#MapSec">Como Chegar?</a></li>
+            <li><a href="index.html#InfoSec">Contato</a></li>
+            <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
         </ul>
      </nav>
     </header>
