--- a/Site/index.html
+++ b/Site/index.html
@@ -24,9 +24,10 @@
             <li><a href="#InicioSec">Home</a></li>
             <li><a href="#ActiveSec">Atividades</a></li>
             <li><a href="/profissionais.html">Profissionais</a></li>
-            <li><a href="/">Chás</a></li>
+            <li><a href="/chas.html">Chás</a></li>
             <li><a href="#MapSec">Como Chegar?</a></li>
             <li><a href="#InfoSec">Contato</a></li>
+            <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
         </ul>
      </nav>
     </header>
