--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -23,9 +23,10 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="index.html#ActiveSec">Atividades</a></li>
             <li><a href="/profissionais.html">Profissionais</a></li>
-            <li><a href="/">Chás</a></li>
+            <li><a href="/chas.html">Chás</a></li>
             <li><a href="index.html#MapSec">Como Chegar?</a></li>
             <li><a href="index.html#InfoSec">Contato</a></li>
+            <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
         </ul>
      </nav>
     </header>
